set height:auto on images to prevent empty space on mobile
Previously, images had empty space above/below them when viewing on a mobile
device, where the image needed to be resized.

--- a/assets/1.scss
+++ b/assets/1.scss
@@ -375,6 +375,7 @@ main {
     img {
 	object-fit: contain;
 	border: 0;
+	height: auto;
     }
 
     table th,
